# fsearch-plugin-app-launcher

./: Cargo.toml  README.md
src/: main.rs
