[package]
name = "fsearch-plugin-app-lancher"
version = "0.0.2"
edition = "2021"
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
description = "A plugin for fsearch to launch applications"
homepage = "https://github.com/luxluth/fsearch-plugin-app-launcher#readme"
repository = "https://github.com/luxluth/fsearch-plugin-app-launcher.git"
keywords = ["fsearch", "plugins", "launcher", "applications"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsearch-core = "0.0.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
xdgkit = "3.2.5"
